--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
+    "print_front": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
