--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -H 0.0.0.0 -p $PORT",
+    "dev": "next dev",
+    "devmobile": "next dev -H 0.0.0.0 -p 3000",
     "build": "next build",
     "start": "next start -p $PORT",
     "lint": "next lint"
