--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "devmobile": "next dev -H 0.0.0.0 -p 3000",
+    "devmobile": "next dev -H 0.0.0.0 -p $PORT",
     "build": "next build",
     "start": "next start -p $PORT",
     "lint": "next lint"
