--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "primereact": "^10.8.4",
     "print_front": "file:",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
