--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.8",
     "next": "15.0.2",
     "prime": "^0.3.2",
     "primeflex": "^3.3.1",
